--- a/assets/global.css
+++ b/assets/global.css
@@ -13,8 +13,17 @@
 .jumb-btn {
     animation: slide-in-bottom 0.7s ease-in-out forwards;
 }
+.scale-up {
+    animation: scale-up 0.7s ease-in-out forwards;
+}
+.scale-down {
+    animation: scale-down 0.7s ease-in-out forwards;
+}
 .ping {
-    animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
+    animation: ping 2s ease-in-out infinite;
+}
+.bounce {
+    animation: bounce 1s infinite;
 }
 
 @keyframes slide-in-left {
@@ -50,8 +59,38 @@
     }
 }
 @keyframes ping {
-    75%, 100% {
+    from {
       transform: scale(1.2);
       opacity: 0.5;
+    } 
+    to {
+        transform: scale();
+        opacity: 1;
+    }
+}
+@keyframes scale-up {
+    from {
+        transform: scale(1);
+    }
+    to {
+        transform: scale(1.1);
+    }
+}
+@keyframes scale-down {
+    from {
+        transform: scale(1.1);
+    }
+    to {
+        transform: scale(1);
+    }
+}
+@keyframes bounce {
+    0%, 100% {
+      transform: translateY(-20%);
+      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
+    }
+    50% {
+      transform: translateY(0);
+      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
     }
   }
